[package]
name = "rmw_libp2p_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
libp2p = "0.46.1"
cdr = "0.2.4"
futures-util = "0.3.26"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.deadqueue]
version = "0.2.4"
default-features = true

[dependencies.tokio]
tokio = "1.25.0"
features = [
    "rt-multi-thread",
]

[lib]
crate-type=["staticlib"]
